<resources>
    <string name="app_name">UltaTracker</string>
    <string name="settings">Settings</string>
    <string name="planner">Planner</string>
    <string name="health">Health</string>
    <string name="exercise">Exercise</string>
    <string name="todo">Todo</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>
    <string name="recent">Recent</string>
    <string name="recent_entries">Recent Entries:</string>
    <string name="add_button">add button</string>
    <string name="add_exercise_button">add exercise button</string>
    <string name="add_health_button">add health button</string>
    <string name="add_planner_button">add to planner button</string>
    <string name="tasks">Tasks</string>
    <string name="home_button">Home</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="reminder">Reminder</string>
    <string name="complete">Complete</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="move_to_tasks">Move to Tasks</string>
    <string name="current_date">Current Date</string>
    <string name="create_a_new_task">Create a New Task</string>
...
    <string name="togglebutton">ToggleButton</string>
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="edit_task">Edit Task</string>
    <string name="set">Set</string>
    <string name="max_length_12_characters">*Max length = 12 characters</string>
    <string name="edit_a_task">Edit This Task</string>
    <string name="view">View</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_food">Add New Food</string>
    <string name="calories">Calories</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="enter_calories">Enter Calories</string>
...
    <string name="add_to_meal">Add To Meal</string>
    <string name="food_bank">Food Bank</string>
    <string name="add_new_food">Add New Food</string>
    <string name="delete_food">Delete Food</string>
    <string name="meal_name">Meal Name:</string>
    <string name="enter_meal_s_name">Enter meal\'s name</string>
    <string name="create">Create</string>
    <string name="edit_a_food">Edit A Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="create_ride">Create Ride</string>
    <string name="edit_ride">Edit Ride</string>
    <string name="select_a_day_for_tracker_view">Select a Day for Tracker View</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="create_a_new_note">Create a New Note</string>
    <string name="enter_note_name">Note Name</string>
    <string name="enter_note_description">Note Description</string>
    <string name="date_">Date:</string>
    <string name="create_note_button">Create Note</string>
    <string name="erase_local_data">Erase Local Data</string>
    <string name="erase">Erase</string>
    <string name="change_units">Change Units</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="UpcomingReminders">Upcoming Reminders</string>
    <string name="create_a_new_reminder">Create a New Reminder</string>
    <string name="enter_reminder_name">Reminder Name</string>
    <string name="enter_reminder_description">Reminder Description</string>
    <string name="create_reminder_button">Create</string>
    <string name="update_reminder">Update</string>
    <string name="update_note">Update Note</string>
    <string name="today_s_entries">Today\'s Entries</string>
    <string name="today_entries">Today\'s Entries</string>
    <string name="distance">Distance (in miles)</string>
    <string name="todays_bodyweight">Today\'s Bodyweight (in pounds)</string>
    <string name="create_lift_button">Create Lift</string>
...
