...
        android:id="@+id/reminder_time_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_reminder_time"
        app:layout_constraintEnd_toStartOf="@+id/edit_reminder_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reminder_date_textview"
        app:layout_constraintTop_toTopOf="@+id/edit_reminder_time" />

    <TextView
        android:id="@+id/reminder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/reminder_name_entry"
        app:layout_constraintTop_toBottomOf="@+id/edit_reminder_date" />

    <Button
        android:id="@+id/edit_reminder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/create_reminder_textview" />

    <Button
        android:id="@+id/reminder_cancel_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="8dp"
        android:onClick="cancelPressed"
...
